# Lab2

./: .gitignore  CITATION.cff  README.md  lab2_a00.code-workspace  setup.py  template.tex
.github/workflows/: build_latex.yml
LabTools/: CMakeLists.txt  LabTools.h  README.md
LabTools/include/: ATLASStyle.h  LabPlot.h  LabPlotCore.h  LabStat.h  LabTools.h  Logger.h  PltTools.h  RooPlot.h  StaTools.h  StsTools.h
LabTools/include/Bode/: Analysis.h
LabTools/src/: ATLASStyle.cpp  LabPlot.cpp  LabPlotCore.cpp  LabStat.cpp  LabTools.cpp  Logger.cpp  PltTools.cpp  RooPlot.cpp  StaTools.cpp  StsTools.cpp
LabTools/src/Bode/: Analysis.cpp
esperienza_0_DELETE_AFTER_INIT/: test_revtex4_2.aux  test_revtex4_2.blg  test_revtex4_2.fdb_latexmk  test_revtex4_2.fls  test_revtex4_2.tex
esperienza_0_DELETE_AFTER_INIT/tables/: TABLE_RAW.tex  table.tex
esperienza_1__filtro_primo_ordine/: README.md
esperienza_1__filtro_primo_ordine/analisi_dati/: analisi_RC_filter.C  pd1  pd1.cpp
esperienza_1__filtro_primo_ordine/dati/: presa_dati_2021_10_19.txt  presa_dati_2021_10_19_seconda_versione.txt  presadati1.txt
esperienza_1__filtro_primo_ordine/misc/: cleandata.txt  cleandata_correct.txt  computeddata.txt  computeddata_correct.txt
esperienza_1__filtro_primo_ordine/relazione/: esperienza_1_2021_10_12.fls  esperienza_1_2021_10_12.tex
esperienza_2__filtro_secondo_ordine/: README.md
esperienza_2__filtro_secondo_ordine/analisi_dati/: analisi_RLC_filter.C
esperienza_2__filtro_secondo_ordine/dati/: dati misura resistenza generatore  presa_dati_2021_10_26.txt  presa_dati_2021_10_26_1_8k.txt
esperienza_2__filtro_secondo_ordine/misc/: cleandata.txt  computeddata.txt  rawdata.txt
esperienza_2__filtro_secondo_ordine/relazione/: esperienza_2_2021_10_22.tex
esperienza_3__misura_permeabilita_magnetica/: README.md
esperienza_3__misura_permeabilita_magnetica/analisi_dati/: analisi_RLC_filter.C  analisi_permeabilita.C  analisi_permeabilita2.C
esperienza_3__misura_permeabilita_magnetica/dati/: presa_dati_libero.txt  presa_dati_libero_archivio.txt  presa_dati_materiale1.txt  presa_dati_materiale1_archivio.txt  presa_dati_materiale2.txt
esperienza_3__misura_permeabilita_magnetica/misc/: cleandata__libero.txt  cleandata__libero.txt.txt  cleandata__materiale1.txt  cleandata__materiale1.txt.txt  cleandata__materiale2.txt.txt  computeddata.txt  computeddata__libero.txt  computeddata__libero.txt.txt  computeddata__materiale1.txt  computeddata__materiale1.txt.txt  (+6 more)
esperienza_4__irraggiamento_lampadina/: README.md
esperienza_5__DAC_ADC/: README.md
esperienza_6__velocita_suono/: README.md
esperienza_7__effetto_hall/: README.md
style/: lab_unige.cls  lcsec.sty  preamble.tex  template_old.tex
tools/: LabTools.h  tools.h
(+203 files in other folders)
